--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "body-parser-xml": "^2.0.5",
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-xml-bodyparser": "^0.3.0",
+    "knex": "^0.95.11",
     "objection": "^2.2.17",
     "pg": "^8.0.3"
   },
@@ -22,4 +26,3 @@
     "nodemon": "^2.0.12"
   }
 }
-
